[package]
name = "tuitty-rs"
version = "0.1.0"
authors = ["imdav"]
edition = "2018"
repository = "https://github.com/imdaveho/tuitty-rs"
documentation = ""
license = "MIT"
keywords = ["tty", "tui", "terminal", "console", "windows", "linux", "cli", "tuitty"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"

[dependencies]
tuitty = { path = "../tuitty"}

[target.'cfg(unix)'.dependencies]
libc = "0.2.60"

[target.'cfg(windows)'.dependencies]
winapi = { version =  "0.3.7", features = ["wincon", "winbase", "winuser", "winnt", "consoleapi", "processenv", "handleapi"] }